<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#FFCCCC"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/your_image"
        tools:srcCompat="@drawable/ic_test"/>


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/app_profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_address"
        android:textAlignment="center"
        android:textColor="#554F4F"
        android:textSize="12sp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/editprofilebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/aboutme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/app_aboutme"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/myaboutme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_myaboutme"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/app_interest"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/myinterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_myinterest"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/app_educ"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/myeducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_myeduc"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/app_exp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/myexperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_myexp"
        android:textColor="@color/gray"
        android:textSize="16sp" />

</LinearLayout>